fix: use Arrays.asList instead of List.of in OpenApiConfig
This project targets Java 8 (maven.compiler.source/target=1.8);
List.of is Java 9+ and failed to compile.